# rust-grpc-gatgway

./: .gitignore  Cargo.toml  README.md  build.rs  build_ohos.ps1  build_ohos.sh  init.py
mobile/: Cargo.toml
mobile/src/: lib.rs  log.rs
src/: client.rs  lib.rs  server.rs
