[package]
name = "rust-grpc"
version = "0.1.0"
authors = ["snowlyg <brendenaudrina6287@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]] # Bin to run the gateway gRPC server
name = "gateway-server"
path = "src/server.rs"

[[bin]] # Bin to run the gateway gRPC client
name = "gateway-client"
path = "src/client.rs"

[dependencies]
tonic = "0.13.1"
prost = "0.13.5"
tokio = { version = "1.45.0", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-build = "0.13.1"
