[package]
name = "rust-grpc"
version = "0.1.0"
authors = ["snowlyg <brendenaudrina6287@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]] # Bin to run the gateway gRPC server
name = "gateway-server"
path = "src/server.rs"

[[bin]] # Bin to run the gateway gRPC client
name = "gateway-client"
path = "src/client.rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
tonic = "0.13.1"
prost = "0.13.5"
tokio = { version = "1.45.0", features = ["macros", "rt-multi-thread"] }
napi-ohos = { version = "0.0.6" }
napi-derive-ohos = { version = "0.0.6" }
mobile = { path = "./mobile" }
proc-macro2 = "=1.0.79"
clap = { version = "4.5.38", features = ["derive"] }

[build-dependencies]
tonic-build = "0.13.1"
napi-build-ohos = { version = "0.0.3" }

[profile.release]
lto = true
opt-level = "s"
#strip = true
debug = true
codegen-units = 1
